# Sensitive-Data-Detection-Compliance-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py
app/models/: orm.py  schemas.py
app/services/: bm25_index.py  browser_cleanup_server.py  chunking.py  compliance.py  embeddings.py  llm.py  llm_detector.py  qa.py  rag_indexer.py  retrieval.py  session_manager.py  vector_store.py
app/services/parsers/: __init__.py  csv_parser.py  pdf_parser.py  txt_parser.py
