[project]
name = "assignmen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "isort>=8.0.1",
    "openai>=2.44.0",
    "orjson>=3.11.9",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "pymupdf>=1.28.0",
    "pytesseract>=0.3.13",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "rank-bm25>=0.2.2",
    "ruff>=0.15.20",
    "sentence-transformers>=5.6.0",
    "spacy>=3.8.14",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.49.0",
]
